# smart-input-filter

./: .travis.yml  CMakeLists.txt  README.md  build_arduino.sh  compile_commands.json  format.sh  library.json  library.properties  test.sh
.githooks/: pre-commit
.github/workflows/: built-platformio.yaml
cmake/: fetch.cmake
examples/builds/: builds.ino
examples/button-filter/: button-filter.ino
examples/debounce/: debounce.ino
examples/edge-filter/: edge-filter.ino
examples/exponential-moving-average/: exponential-moving-average.ino
examples/median-filter/: median-filter.ino
examples/quantization-filter/: quantization-filter.ino
src/: analog-filter.cpp  analog-filter.h  button-filter.cpp  button-filter.h  debounce-filter.cpp  debounce-filter.h  debounce-input.cc  debounce-input.cpp  debounce-input.h  edge-filter.cpp  edge-filter.h  exponential-moving-average-filter.h  exponential-moving-average-input.cpp  exponential-moving-average-input.h  filter.cc  filter.cpp  filter.h  median-filter.h  quantization-filter.h
test/: button-filter-test.cpp  debounce-filter-test.cpp  debounce-input-test.cc  debounce-input-test.cpp  edge-filter-test.cpp  exponential-moving-average-filter-float-test.cpp  exponential-moving-average-filter-test.cpp  exponential-moving-average-input-test.cpp  filter-test.cpp  median-filter-test.cpp  quantization-filter-test.cpp  run-data-test.cpp  run-data-test.h
